--- a/public/cat.html
+++ b/public/cat.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
- <head>
- <link rel="stylesheet" type="text/css" href="stylesheets/cat_style.css">
+<head>
+    <title>고양이학개론</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" type="text/css" rel="stylesheet">
+    <link href="stylesheets/style.css" type="text/css" rel="stylesheet">
+  
+</head>
+<body>
+    
+ <div class="content">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZNbQKOiLvGwyyNO13Bg3QJCwZE-Wf4T8XRicJ1JB7CjYkNGVYBDeANfk" class="writer-img">
+    <h3 class="byline">Article By: 동은 김</h3>
+    <h1>고양이와 인간 사이의 관계론</h1>
+    <h2>인간과의 상호관계를 중점으로</h2>
+    <p>살다보면 고양이를 마주칠 때가 있다. 그럴 때 마다 이 고양이가 주워도 되는지 안 되는지 생각을 항상 해야한다. 만약 주울 수 있는 고양이라면 주워서 기르도록 한다. 살다보면 고양이를 마주칠 때가 있다. 그럴 때 마다 이 고양이가 주워도 되는지 안 되는지 생각을 항상 해야한다. 만약 주울 수 있는 고양이라면 주워서 기르도록 한다.</p>
+    <p>고양이를 주울 때 주의할 점</p>
+    <ul>
+     <li>엄마가 있는가?</li>
+     <li>충분히 귀여운가?</li>
+     <li>집에서 키울 수 있는가?</li>
+    </ul>
+<p>위의 조건들을 모두 충족한다면 이제 주워서 기르도록 하자!</p>
+</div>
 
-  <title>김동은의 고양이학개론</title>
- </head>
-<a href="https://namu.wiki/w/%EA%B3%A0%EC%96%91%EC%9D%B4" target="_blank"><img src="https://ext.fmkorea.com/files/attach/new/20141218/3842645/7815023/88861655/1e991e56dd86f27f70cad14fb6193db4.png" alt="심장 폭행 고양이짤"></a>
- <body>
-  <h1>난 고양이가 너무 좋아!</h1>
-  <p>왜 그런지는 잘 알 수 없으나 그들은 너무 귀엽다. 왜 고양이는 귀여운가? 그건 고양이의<br/>
-     숙명이다. 귀여움을 거부할 수 없는 타고난 운명인 셈이다. 언젠가 나도 나만의 고양이를<br/>
-     키울 것이다. 아니면 고양이를 닮은 그녀를 만나거나...</p>
-  <p>고양이의 특성</p>
-<ul>
- <li>미친듯이 귀엽다.</li>
- <li>인간보다 뛰어난 지능을 가졌다.</li>
- <li>아기 고양이의 경우, 귀여움이 배가 된다..</li>
-</ul>
-<p>고양이의 종류</p>
-<ol>
- <li>아주 귀여운 고양이</li>
- <li>조금 귀여운 고양이</li>
- <li>살짝 귀여운 고양이</li>
- <li>안 귀여운 고양이</li>
-</ol>
+  <div class="image">
+    <p class="caption">그냥 고양이 사진이다.</p>
+  </div>
 
-<a href="https://www.google.co.kr/search?q=%EA%B3%A0%EC%96%91%EC%9D%B4%EC%82%AC%EC%A7%84&rlz=1C1CHZL_koKR752KR752&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj68puDi6zVAhVjqVQKHZbCBp0Q_AUICigB&biw=1366&bih=638"
-target="_blank">고양이사진</a>
- 
 </body>
-
 </html>
